chore: 移除页面中重复联系方式

--- a/index.html
+++ b/index.html
@@ -161,10 +161,9 @@
         </div>
 
         <section>
-            <h2>Research Focus & Contact</h2>
+            <h2>Research Focus</h2>
             <ul>
                 <li><strong>Research focus:</strong> LLM data synthesis; Efficient AIGC</li>
-                <li><strong>Contact:</strong> <a href="mailto:fenglang918@foxmail.com">fenglang918@foxmail.com</a></li>
             </ul>
         </section>
 
