chore: 为导师姓名添加主页链接

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <section>
             <h2>Education</h2>
             <h3>The Hong Kong University of Science and Technology (Guangzhou) · 2026.09–</h3>
-            <p>PhD in Artificial Intelligence; will enroll in Fall 2026; advisor: Prof. Linfeng Zhang (张林峰).</p>
+            <p>PhD in Artificial Intelligence; will enroll in Fall 2026; advisor: <a href="https://sai.sjtu.edu.cn/cn/facultydetails/zzjs/zhanglinfeng">Prof. Linfeng Zhang (张林峰)</a>.</p>
             
             <h3>Fudan University, School of Economics · 2024.09–2026.06</h3>
             <p>Master of Finance (MFin), Financial Technology (FinTech); admitted via Summer Camp recommendation; Entrance Scholarship: RMB 55,000.</p>
