chore: 合并研究相关内容到单一章节

--- a/index.html
+++ b/index.html
@@ -161,14 +161,10 @@
         </div>
 
         <section>
-            <h2>Research Focus</h2>
+            <h2>Research</h2>
             <ul>
                 <li><strong>Research focus:</strong> LLM data synthesis; Efficient AIGC</li>
             </ul>
-        </section>
-
-        <section>
-            <h2>Research Interests</h2>
             <p>My long-term research interest is: <strong>how can intelligence grow and scale, while remaining precisely calibrated to the complexity of the real world?</strong></p>
             <p>More specifically, I am currently studying how to use agents to synthesize data, improve LLM performance in science-related domains, and further build the benchmarks that science needs. As human-generated data is rapidly compressed into model intelligence, synthetic data is destined to become a key approach for LLM self-learning and unbounded growth. At the same time, we need to continuously design high-quality benchmarks to calibrate model intelligence. These benchmarks are also the ultimate reward in reinforcement learning: we propose increasingly challenging benchmarks, and then use reinforcement learning and related techniques to design more fine-grained reward signals to train the self-learning of LLMs.</p>
         </section>
