chore: 页面联系方式新增小红书链接

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
             <div class="contact-links">
                 <a href="mailto:fenglang918@foxmail.com">📧 Email</a>
                 <a href="https://github.com/fenglang918">💻 GitHub</a>
+                <a href="https://www.xiaohongshu.com/user/profile/6120ecdb00000000010020ba">📷 Xiaohongshu</a>
             </div>
         </div>
 
