--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             <div class="contact-links">
                 <a href="mailto:fenglang918@foxmail.com">📧 Email</a>
                 <a href="https://github.com/fenglang918">💻 GitHub</a>
-                <a href="https://www.xiaohongshu.com/user/profile/6120ecdb00000000010020ba">📷 Xiaohongshu</a>
+                <a href="https://www.xiaohongshu.com/user/profile/6120ecdb00000000010020ba">📷 RedNote</a>
             </div>
             <div class="nav">
                 <a href="#research">Research</a>
