docs: 更新摄影作品描述

--- a/photography.html
+++ b/photography.html
@@ -200,8 +200,8 @@
                 <div class="caption">Loveletter</div>
             </div>
             <div class="photo-item" onclick="openLightbox(this)">
-                <img src="photograph/xiaozhangCircle.jpg" alt="Circle">
-                <div class="caption">Circle</div>
+                <img src="photograph/xiaozhangCircle.jpg" alt="Spinning in the Autumn Sun">
+                <div class="caption">Spinning in the Autumn Sun — warmth, vintage trains, and the sheer joy of a fleeting moment.</div>
             </div>
             <!-- 未来添加更多照片只需复制 photo-item 即可 -->
         </div>
