docs: 优化 Research 章节文案并同步中文翻译

--- a/index.html
+++ b/index.html
@@ -237,8 +237,9 @@
 
         <section id="research">
             <h2>Research</h2>
-            <p>My long-term research vision is to <strong>bridge the gap between scalable intelligence and physical reality</strong>.</p>
-            <p>Currently, I focus on <strong>LLM Data Synthesis</strong> and <strong>Efficient AIGC</strong>. I investigate how to leverage agents for high-quality data synthesis to scale post-training, particularly in scientific domains. Simultaneously, I am building rigorous benchmarks to align model capabilities with complex real-world dynamics, treating evaluation as the ultimate reward signal for reinforcement learning.</p>
+            <p>My long-term research interest is: <strong>how can intelligence grow and scale, while remaining precisely calibrated to the complexity of the real world?</strong></p>
+            <p>More specifically, I am currently studying how to use <strong>Agents</strong> to synthesize data, improve LLM performance in <strong>science-related domains</strong>, and further build the <strong>benchmarks</strong> that science needs.</p>
+            <p>As human-generated data is rapidly compressed into model intelligence, <strong>synthetic data</strong> is destined to become a key approach for LLM self-learning and unbounded growth. At the same time, we need to continuously design high-quality benchmarks to <strong>calibrate</strong> model intelligence. These benchmarks are also the ultimate <strong>reward</strong> in reinforcement learning: we propose increasingly challenging benchmarks, and then use reinforcement learning and related techniques to design more fine-grained reward signals to train the self-learning of LLMs.</p>
         </section>
 
         <section id="experience">
