--- a/index_cn.html
+++ b/index_cn.html
@@ -66,7 +66,7 @@
         }
         
         h1 {
-            font-family: "Songti SC", "SimSun", serif; /* 中文宋体 */
+            font-family: "Songti SC", "SimSun", serif;
             color: #111;
             margin-bottom: 10px;
             font-size: 2.2em;
@@ -233,8 +233,9 @@
 
         <section id="research">
             <h2>研究方向</h2>
-            <p>我的长期研究愿景是<strong>弥合可扩展智能与物理现实之间的鸿沟</strong>。</p>
-            <p>目前，我专注于<strong>LLM 数据合成</strong>与<strong>高效 AIGC</strong>。我致力于探索如何利用智能体（Agents）进行高质量的数据合成，以扩展模型的后训练（Post-training），特别是在科学领域。同时，我正在构建严谨的基准测试（Benchmarks），将模型能力与复杂的现实世界动态对齐，并将评估作为强化学习的终极奖励信号。</p>
+            <p>我的长期研究兴趣是：<strong>智能如何增长、扩展，并在真实世界的复杂环境下得以精准校准？</strong></p>
+            <p>具体来说，目前我在研究如何用 <strong>Agent</strong> 合成数据，提高 LLM 在 <strong>Science 领域</strong>的表现，并进一步建立 Science 需要的 <strong>Benchmark</strong>。</p>
+            <p>随着人类已有数据飞速地被压缩入模型智能，<strong>合成数据</strong>一定是 LLM 自我学习、无限增长的重要手段；同时，我们需要不断提出高质量的 Benchmark 来<strong>校准</strong>模型智能；当然，Benchmark 本身也是强化学习的<strong>终极 Reward</strong>，我们提出一个个具有挑战性的 Benchmark，再通过强化学习等手段设计更精细的 Reward 来训练 LLM 的自我学习。</p>
         </section>
 
         <section id="experience">
@@ -304,4 +305,3 @@
     </div>
 </body>
 </html>
-
