--- a/index_cn.html
+++ b/index_cn.html
@@ -276,7 +276,7 @@
         <section id="education">
             <h2>教育背景</h2>
             <h3>香港科技大学 (广州)</h3>
-            <p>人工智能博士生 (候补) · 2026 秋季入学<br>
+            <p><strong>准博士生 (Incoming PhD Student)</strong> · 人工智能 · 2026 秋季入学<br>
             导师: <a href="https://sai.sjtu.edu.cn/cn/facultydetails/zzjs/zhanglinfeng">张林峰教授</a>。</p>
             
             <h3>复旦大学</h3>
