--- a/index_cn.html
+++ b/index_cn.html
@@ -257,7 +257,7 @@
             <h2>发表</h2>
             
             <div class="publication-item">
-                <div class="publication-title">HiCache: A Plug-in Scaled-Hermite Upgrade for Taylor-Style Cache-then-Forecast Diffusion Acceleration</div>
+                <div class="publication-title"><a href="https://arxiv.org/html/2508.16984v1" target="_blank" rel="noopener">HiCache: A Plug-in Scaled-Hermite Upgrade for Taylor-Style Cache-then-Forecast Diffusion Acceleration</a></div>
                 <div class="publication-meta">
                     <strong>Liang Feng*</strong>, et al. (共同一作)<br>
                     Under review at <strong>ICLR 2026</strong>.
@@ -265,7 +265,7 @@
             </div>
 
             <div class="publication-item">
-                <div class="publication-title">Forecast then Calibrate: Feature Caching as ODE for Efficient Diffusion Transformers</div>
+                <div class="publication-title"><a href="https://arxiv.org/abs/2508.16211" target="_blank" rel="noopener">Forecast then Calibrate: Feature Caching as ODE for Efficient Diffusion Transformers</a></div>
                 <div class="publication-meta">
                     Co-second Author (共同二作)<br>
                     Second-round review at <strong>AAAI 2026</strong>.
