--- a/photography.html
+++ b/photography.html
@@ -144,12 +144,15 @@
         }
 
         .caption {
-            margin-top: 8px;
-            font-size: 0.85em;
-            color: #888;
+            margin-top: 12px;
+            font-size: 0.95em;
+            color: #555;
             font-family: "Inter", sans-serif;
-            text-align: right;
-            line-height: 1.5;
+            text-align: left;
+            line-height: 1.6;
+            max-width: 520px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         .footer {
