docs: 明确共同一作署名顺位

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="publication-item">
                 <div class="publication-title"><a href="https://arxiv.org/html/2508.16984v1" target="_blank" rel="noopener">HiCache: A Plug-in Scaled-Hermite Upgrade for Taylor-Style Cache-then-Forecast Diffusion Acceleration</a></div>
                 <div class="publication-meta">
-                    <strong>Liang Feng*</strong>, et al. (Co-first Author)<br>
+                    <strong>Liang Feng*</strong>, et al. (Co-first Author · 1st author)<br>
                     Under review at <strong>ICLR 2026</strong>.
                 </div>
             </div>
@@ -286,7 +286,7 @@
             <div class="publication-item">
                 <div class="publication-title"><a href="https://arxiv.org/abs/2508.16211" target="_blank" rel="noopener">Forecast then Calibrate: Feature Caching as ODE for Efficient Diffusion Transformers</a></div>
                 <div class="publication-meta">
-                    Co-second Author<br>
+                    Co-first Author · 2nd author<br>
                     Second-round review at <strong>AAAI 2026</strong>.
                 </div>
             </div>
