--- a/index_cn.html
+++ b/index_cn.html
@@ -274,7 +274,7 @@
             <div class="publication-item">
                 <div class="publication-title"><a href="https://arxiv.org/html/2508.16984v1" target="_blank" rel="noopener">HiCache: A Plug-in Scaled-Hermite Upgrade for Taylor-Style Cache-then-Forecast Diffusion Acceleration</a></div>
                 <div class="publication-meta">
-                    <strong>Liang Feng*</strong>, et al. (共同一作)<br>
+                    <strong>Liang Feng*</strong>, et al. (共同一作·第一署名)<br>
                     Under review at <strong>ICLR 2026</strong>.
                 </div>
             </div>
@@ -282,7 +282,7 @@
             <div class="publication-item">
                 <div class="publication-title"><a href="https://arxiv.org/abs/2508.16211" target="_blank" rel="noopener">Forecast then Calibrate: Feature Caching as ODE for Efficient Diffusion Transformers</a></div>
                 <div class="publication-meta">
-                    Co-second Author (共同二作)<br>
+                    Co-first Author (共同一作·第二署名)<br>
                     Second-round review at <strong>AAAI 2026</strong>.
                 </div>
             </div>
