--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <ul>
                 <li>Fudan SOE Entrance Scholarship (2024)</li>
                 <li>National Scholarship (2020–2021)</li>
-                <li>Outstanding Graduate (2024)</li>
+                <li>Outstanding Graduate, UESTC (2024)</li>
                 <li>Provincial Second Prize, FLTRP English Challenge (2022)</li>
                 <li>Sichuan Provincial High School Physics Competition: Second Prize (2017)</li>
             </ul>
