--- a/index_cn.html
+++ b/index_cn.html
@@ -293,7 +293,7 @@
             <ul>
                 <li>复旦大学经济学院入学奖学金 (2024)</li>
                 <li>国家奖学金 (2020–2021)</li>
-                <li>四川省优秀毕业生 (2024)</li>
+                <li>电子科技大学优秀毕业生 (2024)</li>
                 <li>外研社·国才杯英语阅读大赛 省级二等奖 (2022)</li>
                 <li>四川省高中物理竞赛 二等奖 (2017)</li>
             </ul>
