fix: 头像改为本地引用，避免 raw 链接失效

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
             <div class="lang-switch">
                 <a href="index.html" class="active">EN</a> | <a href="index_cn.html">中文</a>
             </div>
-            <img src="https://raw.githubusercontent.com/fenglang918/fenglang918/main/selfie.jpg" alt="Liang Feng" class="avatar">
+            <img src="selfie.jpg" alt="Liang Feng" class="avatar">
             <h1>Liang Feng (冯亮)</h1>
             <div class="contact-links">
                 <a href="mailto:fenglang918@foxmail.com">Email</a> · 
