--- a/index_cn.html
+++ b/index_cn.html
@@ -215,7 +215,7 @@
             <div class="lang-switch">
                 <a href="index.html">EN</a> | <a href="index_cn.html" class="active">中文</a>
             </div>
-            <img src="https://raw.githubusercontent.com/fenglang918/fenglang918/main/selfie.jpg" alt="Liang Feng" class="avatar">
+            <img src="selfie.jpg" alt="Liang Feng" class="avatar">
             <h1>冯亮 (Liang Feng)</h1>
             <div class="contact-links">
                 <a href="mailto:fenglang918@foxmail.com">Email</a> · 
