docs: 更新 AAAI 2026 论文为 poster 已接收

--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                 <div class="publication-title"><a href="https://arxiv.org/abs/2508.16211" target="_blank" rel="noopener">Forecast then Calibrate: Feature Caching as ODE for Efficient Diffusion Transformers</a></div>
                 <div class="publication-meta">
                     Co-first Author · 2nd author<br>
-                    Second-round review at <strong>AAAI 2026</strong>.
+                    Accepted (Poster) at <strong>AAAI 2026</strong>.
                 </div>
             </div>
         </section>
