--- a/index_cn.html
+++ b/index_cn.html
@@ -283,7 +283,7 @@
                 <div class="publication-title"><a href="https://arxiv.org/abs/2508.16211" target="_blank" rel="noopener">Forecast then Calibrate: Feature Caching as ODE for Efficient Diffusion Transformers</a></div>
                 <div class="publication-meta">
                     Co-first Author (共同一作·第二署名)<br>
-                    Second-round review at <strong>AAAI 2026</strong>.
+                    已录取（Poster），<strong>AAAI 2026</strong>.
                 </div>
             </div>
         </section>
