--- a/index_cn.html
+++ b/index_cn.html
@@ -272,7 +272,7 @@
             <h2>发表</h2>
             
             <div class="publication-item">
-                <div class="publication-title"><a href="https://arxiv.org/html/2508.16984v1" target="_blank" rel="noopener">HiCache: A Plug-in Scaled-Hermite Upgrade for Taylor-Style Cache-then-Forecast Diffusion Acceleration</a></div>
+                <div class="publication-title"><a href="https://openreview.net/forum?id=faYbbo1KsQ&referrer=%5BAuthor%20Console%5D(%2Fgroup%3Fid%3DICLR.cc%2F2026%2FConference%2FAuthors%23your-submissions)" target="_blank" rel="noopener">HiCache: A Plug-in Scaled-Hermite Upgrade for Taylor-Style Cache-then-Forecast Diffusion Acceleration</a></div>
                 <div class="publication-meta">
                     <strong>Liang Feng*</strong>, et al. (共同一作·第一署名)<br>
                     Under review at <strong>ICLR 2026</strong>.
